[package]
name = "hapi-iron-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base64 = "0.21.0"
cbc = { version = "0.1.2", features = ["std"] }
constant_time_eq = "0.2.5"
ctr = { version = "0.9.2", features = ["std"] }
hex = "0.4.3"
lazy_static = "1.4.0"
pbkdf2 = { version = "0.12.1", features = ["parallel"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.5"
sha2 = "0.10.6"
time = { version = "0.3", features = ["local-offset"] }
