[package]
name = "hapi-iron-oxide"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
base64 = "0.21"
cbc = { version = "0.1.2", features = ["std"] }
constant_time_eq = "0.2"
ctr = { version = "0.9", features = ["std"] }
hex = "0.4"
pbkdf2 = { version = "0.12", features = ["parallel"] }
rand = "0.8"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1.0"
time = "0.3"
